@@ -1,3 +1,15 @@
+2007-07-17  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-bytecode.c (syx_bytecode_duplicate_at): increase stack size when duplicating objects
+
+	* st/kernel/SequenceableCollection.st (indexOf:): added
+	(indexOf:startingAt:ifAbsent:): use #= instead of #==
+
+	* st/kernel/Compiler.st: parse literal arrays
+	(CompilerBytecode): added
+
+	* st/kernel/Object.st (caseOf:otherwise:): added
+
 2007-07-16  Luca Bruno  <lethalman88@gmail.com>
 
 	* syx/syx-object.c (syx_class_lookup_method_binding): fixed to handle super messages
